{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 61,
  "lineage": "16f18f32-5045-1ee5-e367-66408cf614f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063edb4b7469af60c",
            "arn": "arn:aws:ec2:us-west-2:831926621413:elastic-ip/eipalloc-063edb4b7469af60c",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-08807b22ee0b63406",
            "domain": "vpc",
            "id": "eipalloc-063edb4b7469af60c",
            "instance": "i-01defd9e2e80ffe28",
            "network_border_group": "us-west-2",
            "network_interface": "eni-051a57b693cba1b3f",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-235-33-139.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.33.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver_nic",
            "aws_security_group.network_access",
            "aws_subnet.production",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "boeing_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04dd23e62ed049936",
            "arn": "arn:aws:ec2:us-west-2:831926621413:instance/i-01defd9e2e80ffe28",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01defd9e2e80ffe28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "boeing-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-051a57b693cba1b3f"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051a57b693cba1b3f",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-235-33-139.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.33.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ae3b1f07c004c9f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb080a99757b0786",
            "tags": {
              "Name": "Boeing"
            },
            "tags_all": {
              "Name": "Boeing"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0225956037db15657"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver_nic",
            "aws_security_group.network_access",
            "aws_subnet.production",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:internet-gateway/igw-0b62d2580677b3637",
            "id": "igw-0b62d2580677b3637",
            "owner_id": "831926621413",
            "tags": {
              "Name": "boeing_gw"
            },
            "tags_all": {
              "Name": "boeing_gw"
            },
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c20d6a7b3e58ce70",
            "original_route_table_id": "rtb-08e2660e770e06459",
            "route_table_id": "rtb-0a392425826ed09a3",
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:network-interface/eni-051a57b693cba1b3f",
            "attachment": [
              {
                "attachment_id": "eni-attach-0295033efb91703d1",
                "device_index": 0,
                "instance": "i-01defd9e2e80ffe28"
              }
            ],
            "id": "eni-051a57b693cba1b3f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:4c:78:03:da:6b",
            "owner_id": "831926621413",
            "private_dns_name": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0225956037db15657"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb080a99757b0786"
          },
          "dependencies": [
            "aws_security_group.network_access",
            "aws_subnet.production",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:route-table/rtb-0a392425826ed09a3",
            "id": "rtb-0a392425826ed09a3",
            "owner_id": "831926621413",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b62d2580677b3637",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "boeing_routes"
            },
            "tags_all": {
              "Name": "boeing_routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group/sg-03d80bd962c540689",
            "description": "Allow MSSQL traffic",
            "egress": [],
            "id": "sg-03d80bd962c540689",
            "ingress": [
              {
                "cidr_blocks": [
                  "173.160.221.128/29",
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "Boeing database access",
            "name_prefix": "",
            "owner_id": "831926621413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boeing_db_access"
            },
            "tags_all": {
              "Name": "boeing_db_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "network_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group/sg-0225956037db15657",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0225956037db15657",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.160.221.128/29"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Boeing network access",
            "name_prefix": "",
            "owner_id": "831926621413",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boeing_access"
            },
            "tags_all": {
              "Name": "boeing_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:subnet/subnet-0bb080a99757b0786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb080a99757b0786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926621413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production"
            },
            "tags_all": {
              "Name": "Production"
            },
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:subnet/subnet-08a84baa18134c01b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a84baa18134c01b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926621413",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "vpc_id": "vpc-0d591437fe48d6d9c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:vpc/vpc-0d591437fe48d6d9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4b4e3d713f91078",
            "default_route_table_id": "rtb-0a392425826ed09a3",
            "default_security_group_id": "sg-0c436eb379d284bab",
            "dhcp_options_id": "dopt-0f7b4c26fba95e289",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d591437fe48d6d9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a392425826ed09a3",
            "owner_id": "831926621413",
            "tags": {
              "Name": "boeing_vpc"
            },
            "tags_all": {
              "Name": "boeing_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-0005c942fca5002a2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0005c942fca5002a2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0225956037db15657",
            "security_group_rule_id": "sgr-0005c942fca5002a2",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.network_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-02e969aafb86b1fbc",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-02e969aafb86b1fbc",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0225956037db15657",
            "security_group_rule_id": "sgr-02e969aafb86b1fbc",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.network_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-0b999d7f7ee62e35a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b999d7f7ee62e35a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0225956037db15657",
            "security_group_rule_id": "sgr-0b999d7f7ee62e35a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.network_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mssql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-06445a03e8791ad4b",
            "cidr_ipv4": "173.160.221.128/29",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1433,
            "id": "sgr-06445a03e8791ad4b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03d80bd962c540689",
            "security_group_rule_id": "sgr-06445a03e8791ad4b",
            "tags": null,
            "tags_all": {},
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mssql_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-0d21213f0b446f8aa",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1433,
            "id": "sgr-0d21213f0b446f8aa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03d80bd962c540689",
            "security_group_rule_id": "sgr-0d21213f0b446f8aa",
            "tags": null,
            "tags_all": {},
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.db_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-041ebbaebc8fedd9b",
            "cidr_ipv4": "173.160.221.128/29",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-041ebbaebc8fedd9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0225956037db15657",
            "security_group_rule_id": "sgr-041ebbaebc8fedd9b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.network_access",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:831926621413:security-group-rule/sgr-0c20ec0ad758a2c64",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c20ec0ad758a2c64",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0225956037db15657",
            "security_group_rule_id": "sgr-0c20ec0ad758a2c64",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.network_access",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}